fixed large images not cropping on mobile
croppie-element was removed from DOM before cropping was done

--- a/web_app/src/app/components/image-cropper-modal/image-cropper-modal.component.scss
+++ b/web_app/src/app/components/image-cropper-modal/image-cropper-modal.component.scss
@@ -3,3 +3,18 @@ iframe {
     width: 100%;
     border: none;
 }
+
+.loading {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    bottom: 0;
+
+    app-circular-preloader {
+        margin-left: 50%;
+        transform: translateX(-50%);
+    }
+
+}
